style.css
html{
    height: 100%;
    width: 100%;
    overflow: hidden;
}

body{
    height: 100%;
    width: 100%;
    margin: 0;

    background-color: #7fbadc;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.main{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1{
    text-align: center;
}

.buttons{
    width: 100vw;
    position: absolute;
    bottom: 1vh;
    margin: 0;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.button{
    width: 25vw;
    text-align: center;
    color:black 
}

#timerButton{
    color: black;
}

button{
    all: unset;
}

